# pharmapynetics

./: .gitignore  pyproject.toml
.github/workflows/: pylint.yml  python-publish.yml
examples/: model_fitting.ipynb  prediction.ipynb
pharmapynetics/: metrics.py  models.py  preprocessing.py
