[tool.poetry]
name = "pharmapynetics"
version = "0.1.1"
description = "README.md"
authors = ["LumbaBalumba <vlad.lazar.ik528@yandex.ru>"]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
scipy = "^1.15.1"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
